<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="5dp"
    android:orientation="vertical"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star_premier"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/gold"
            android:padding="10dp"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/dropdown_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gold"
            android:padding="5dp"
            android:contentDescription="@string/home"
            />


    </LinearLayout>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.SearchView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:queryHint="Search Hint"
                android:backgroundTint="@color/gold"
                android:background="@drawable/search_view_bg"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rc_banner"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="10dp"/>

            <com.google.android.material.tabs.TabLayout
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:background="@color/black"
                app:tabSelectedTextColor="@color/white"
                android:contentDescription="@string/category"
                app:tabTextColor="@color/gold"
                app:tabIndicatorColor="@color/gold"
                >

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movies"/>

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_shows"/>

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kids"/>
            </com.google.android.material.tabs.TabLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rc_movies1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/watch_next"
                android:textColor="@color/gold"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:textStyle="bold"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rc_movies2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movies_in_action"
                android:textColor="@color/gold"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:textStyle="bold"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rc_movies3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movies_for_kids"
                android:textColor="@color/gold"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:textStyle="bold"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rc_movies4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/horror"
                android:textColor="@color/gold"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:textStyle="bold"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rc_movies5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>